--- a/pages/legalNotice.html
+++ b/pages/legalNotice.html
@@ -35,7 +35,7 @@
       </div>
       <p class="big-blue-text">Imprint</p>
       <ul class="textStyle">
-        <li>Deividas Kondratjevas, Marco N. , Kieran Mai</li>
+        <li>Deividas Kondratjevas</li>
         <li>Eichenweg 1</li>
         <li>27619, Schiffdorf-Spaden</li>
       </ul>
